--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "gammatest"
 version = "0.1.0"
 edition = "2021"
+authors = ["Saad Dahmani <sd.dahmani2000@gmail.com>"] 
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
