--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,10 @@
 [package]
 name = "gammatest"
-version = "0.1.2"
+version = "0.1.12"
 edition = "2021"
 authors = ["Saad Dahmani <sd.dahmani2000@gmail.com>"] 
 description ="gammatest crate provides a code to perform Gamma Test for machine learning feature selection."
+keywords = ["feature-selection", "machine-learning", "statistics", "statistical"] 
 license = "MIT"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
